pre-deploy: auto-commit before EC2 deployment

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ HUAWEI_API_URL=https://intl.fusionsolar.huawei.com
 HUAWEI_USERNAME=xxx
 HUAWEI_PASSWORD=xxx
 
+# SolisCloud API
+SOLIS_API_URL=https://www.soliscloud.com:13333
+SOLIS_API_ID=xxx
+SOLIS_API_SECRET=xxx
+
 # App
 NEXT_PUBLIC_APP_URL=https://solar.bijlibachao.pk
 NODE_ENV=development
